yamls/coder/deployment_coderd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: coderd
    app.kubernetes.io/component: coderd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/version: 1.44.0
    coder.deployment: coderd
    helm.sh/chart: coder-1.44.0
  name: coderd
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      coder.deployment: coderd
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        app: coderd
        app.kubernetes.io/component: coderd
        app.kubernetes.io/instance: release-name
        app.kubernetes.io/name: coder
        app.kubernetes.io/part-of: coder
        coder.deployment: coderd
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - coderd
              topologyKey: kubernetes.io/hostname
            weight: 1
      containers:
      - command:
        - coderd
        - run
        image: docker.io/coderenvs/coder-service:1.44.0
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 30
          httpGet:
            path: /cem-healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        name: coderd
        ports:
        - containerPort: 8080
          name: tcp-coderd
        - containerPort: 6060
          name: pprof-coderd
        - containerPort: 2112
          name: prom-coderd
        readinessProbe:
          failureThreshold: 15
          httpGet:
            path: /cem-healthz
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          limits:
            cpu: 250m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsNonRoot: true
          runAsUser: 1000
          seccompProfile:
            type: RuntimeDefault
        tty: false
        volumeMounts:
        - mountPath: /tmp/pgcerts
          name: tmp-pgcerts
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
      restartPolicy: Always
      securityContext:
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: coder
      terminationGracePeriodSeconds: 300
      volumes:
      - emptyDir: {}
        name: tmp-pgcerts
