yamls/coder/service_coderd.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: coderd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/version: 1.44.0
    helm.sh/chart: coder-1.44.0
  name: coderd
  namespace: default
spec:
  externalTrafficPolicy: Local
  loadBalancerIP: ""
  loadBalancerSourceRanges: []
  ports:
  - name: tcp-coderd
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: tcp-coderd-https
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    coder.deployment: coderd
  type: LoadBalancer
