yamls/coder/networkpolicy_ingress-deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: coderd
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/version: 1.44.0
    helm.sh/chart: coder-1.44.0
  name: ingress-deny-all
  namespace: default
spec:
  ingress: []
  podSelector:
    matchLabels:
      com.coder.resource: "true"
  policyTypes:
  - Ingress
