yamls/coder/networkpolicy_timescale.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/component: timescale
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: coder
    app.kubernetes.io/version: 1.44.0
    helm.sh/chart: coder-1.44.0
  name: timescale
  namespace: default
spec:
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: istio-controlplane
      podSelector:
        matchLabels:
          istio: pilot
  - ports:
    - port: 53
      protocol: TCP
    - port: 53
      protocol: UDP
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/component: coderd
          app.kubernetes.io/instance: release-name
    ports:
    - port: 5432
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/component: timescale
      app.kubernetes.io/instance: release-name
  policyTypes:
  - Ingress
  - Egress
